--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "next": "^2.0.0-beta.24",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-ga": "^2.1.2"
   },
   "now": {
