--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "next": "^2.0.0-beta.24",
+    "next": "^2.0.0-beta.25",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-ga": "^2.1.2"
+    "react-dom": "^15.4.2"
   },
   "now": {
     "alias": "fe-lenses"
