--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "next": "^2.0.0-beta.31",
-    "next-routes": "^1.0.14",
+    "next": "^2.0.1",
+    "next-routes": "^1.0.23",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
